# csvxx

./: CMakeLists.txt
include/: CSVXX.hpp
include/private/: DataFrame.hpp
include/private/FileBase/: File.hpp  FileBase.hpp  MemoryMap.hpp  UniqueFileDescriptor.hpp
include/private/FileBase/platformDefines/: linux.hpp  platform.hpp  windows.hpp
source/: CMakeLists.txt  DataFrame.cpp
source/FileBase/: File.cpp  FileBase.cpp  MemoryMap.cpp  UniqueFileDescriptor.cpp
source/FileBase/platformDefines/: linux.cpp  windows.cpp
tests/: CMakeLists.txt  test_file.cpp  test_filebase.cpp  test_memmap.cpp  test_uniquefd.cpp  tests.hpp
tests/data/: a.txt  dasdasda
